--- a/storage/settings.json
+++ b/storage/settings.json
@@ -271,7 +271,7 @@
     "usdt_per_usd": "1",
     "usdt_address": "0x3d62d93177336d53c0c058036e43d76c415b53c3",
     "bank_data": "SHB - Ng\u00e2n ha\u0300ng TMCP Sa\u0300i Go\u0300n - Ha\u0300 N\u00f4\u0323i\r\n1015122574\r\nTRAN THI HANH",
-    "asset_logo": "upload\/images\/logo\/bittrade.png",
+    "asset_logo": "upload\/images\/logo\/beetradex.png",
     "asset_challenge_banner": "upload\/images\/banner\/bannerDeskTop.jpeg",
     "asset_affiliate_network_banner": "upload\/images\/banner\/background_pc_fa409bf_e7945145.png",
     "asset_home_app": "upload\/images\/home\/mockup_17078c5a.png",
