--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,12 +1,12 @@
 {
-    "phone": "bittradecskh@gmail.com",
-    "contact_email": "bittradecskh@gmail.com",
+    "phone": "beetradexcskh@gmail.com",
+    "contact_email": "beetradexcskh@gmail.com",
     "profit_percent": "95",
     "demo_default_balance": "1000",
     "minimum_deposit": "10",
-    "seo_title": "Bittrade | \u0110\u0103ng k\u00fd | \u0110\u0103ng nh\u1eadp",
-    "seo_keywords": "Bittrade, s\u00e0n giao d\u1ecbch, coin, ch\u1ee9ng kho\u00e1n",
-    "seo_description": "Bittrade s\u00e0n giao d\u1ecbch Cryptocurrency \u0111\u1eb3ng c\u1ea5p th\u1ebf gi\u1edbi, kh\u1edfi t\u1ea1o t\u00e0i kho\u1ea3n mi\u1ec5n ph\u00ed, nh\u1eadn ngay 1000$ giao d\u1ecbch th\u1eed, kh\u00e1m ph\u00e1 Bittrade ngay...",
+    "seo_title": "BeeTradeX | \u0110\u0103ng k\u00fd | \u0110\u0103ng nh\u1eadp",
+    "seo_keywords": "BeeTradeX, s\u00e0n giao d\u1ecbch, coin, ch\u1ee9ng kho\u00e1n",
+    "seo_description": "BeeTradeX s\u00e0n giao d\u1ecbch Cryptocurrency \u0111\u1eb3ng c\u1ea5p th\u1ebf gi\u1edbi, kh\u1edfi t\u1ea1o t\u00e0i kho\u1ea3n mi\u1ec5n ph\u00ed, nh\u1eadn ngay 1000$ giao d\u1ecbch th\u1eed, kh\u00e1m ph\u00e1 BeeTradeX ngay...",
     "bank_name": "TP BANK",
     "bank_number": "1234567890",
     "bank_account": "DEMO",
