--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=bittrade_fun
-DB_USERNAME=
+DB_USERNAME=root
 DB_PASSWORD=
 DB_PREFIX=wf_
 
